--- a/src/app/consumidor/tab-inicial/tab-inicial.page.html
+++ b/src/app/consumidor/tab-inicial/tab-inicial.page.html
@@ -2,23 +2,22 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
       <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="agricultoras">
       <ion-icon src="/assets/icon/agricultor.svg"></ion-icon>
-      <ion-label>Agricultoras</ion-label>
+      <ion-label class="text-color-purple text-bold">Agricultoras</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="carrito">
       <ion-icon src="/assets/icon/car.svg"></ion-icon>
-      <ion-label>Carrito</ion-label>
+      <ion-label class="text-color-purple text-bold">Carrito</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="ordenes">
       <ion-icon src="/assets/icon/store_1.svg"></ion-icon>
-      <ion-label>Mis ordenes</ion-label>
+      <ion-label class="text-color-purple text-bold">Mis ordenes</ion-label>
     </ion-tab-button>
-
   </ion-tab-bar>
 </ion-tabs>
