--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
@@ -1,4 +1,8 @@
 .lista-agricultoras{
     width: 95%;
-    height: 300px ;
+    height: 350px;
+    border: 4px;
+    border-style: solid;
+    border-color: var(--warmin-color-orange);
+    background-color: var(--warmin-color-orange);
 }
