--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -1,12 +1,19 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Carrito de compras </ion-title>
   </ion-toolbar>
-</ion-header>
-
+</ion-header> -->
 <ion-content>
-
-  <ion-item-divider class="ion-padding">
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+      </ion-icon>
+      <h4 class="texto-header">Carrito de compra</h4>
+    </div>
+    
+  </div>
+  <ion-item-divider>
     <ion-grid>
     <ion-row>
     <ion-col>
@@ -48,7 +55,7 @@
       <ion-label>Selecciona la fecha de entrega:</ion-label>
   <ion-datetime-button style="text-align: left; margin-top: 10px;" datetime="datetime"></ion-datetime-button>
 </div>
-<ion-button (click)="createOrder()" class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
+<ion-button (click)="createOrder()" class="boton-warmi-in"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
 
   <ion-modal [keepContentsMounted]="true">
   <ng-template>
