--- a/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
+++ b/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
@@ -1,11 +1,17 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>Mis ordenes</ion-title>
+    <ion-title>Mis ordeness</ion-title>
   </ion-toolbar>
-</ion-header>
-
+</ion-header> -->
 <ion-content>
-  
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/login.svg">
+      </ion-icon>
+      <h4 class="texto-header">Mis órdenes</h4>
+    </div>    
+  </div>
     <div class="ion-padding" style="text-align:center;">
       <ion-label>Fecha ordenes realizadas:</ion-label>
   <ion-datetime-button style="text-align: left; margin-top: 10px;" datetime="datetime"></ion-datetime-button>
