--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.scss
@@ -6,3 +6,54 @@
     border-color: var(--warmin-color-orange);
     background-color: var(--warmin-color-orange);
 }
+
+ion-searchbar.search-bar{
+    background: var(--warmin-color-brown);
+    border-radius: 5px;
+    padding: 5px;
+    max-width: 300px;
+}
+
+.padding-bar{
+padding-top: 10px;
+padding-bottom: 10px;
+}
+
+.contenedor-perfiles{
+    padding: auto;
+    margin: auto;
+    // background: var(--warmin-color-pinkd);
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    align-content: center;
+    border-radius: 3px;    
+    
+}
+
+ion-card-header.card-header{
+    background: var(--warmin-color-yellow);
+    
+}
+
+ion-card-content.card-content{
+    background: var(--warmin-color-orange);
+}
+
+ion-card.card-p{
+    border: 5px;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #fff;
+}
+
+.radius{
+ border-color: black;   
+ border: 50px;
+ border-radius: 50%;
+}
+
+.avatar-center{
+    display: flex; 
+    justify-content: center;
+}
