--- a/src/global.scss
+++ b/src/global.scss
@@ -112,6 +112,13 @@ text-decoration: none;
   flex-direction: column;
   text-align: center;
 }
+.container-normal{
+  width: 100%;    
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 .contenedor-item{
   display: flex;
   justify-content: center;
