--- a/src/app/consumidor/geolocalizacion-domicilio/geolocalizacion-domicilio.page.html
+++ b/src/app/consumidor/geolocalizacion-domicilio/geolocalizacion-domicilio.page.html
@@ -1,15 +1,10 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Geolocalización</ion-title>
-  </ion-toolbar>
-</ion-header> -->
 <ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
-      </ion-icon>
-      <h4 class="texto-header">Geolocalización</h4>
+      </ion-icon>      
+      <div class="texto-header">Geolocalización</div>
     </div>
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
