--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
@@ -4,7 +4,7 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/agricultores.svg">
       </ion-icon>
-      <h4 class="texto-header">Agricultoras</h4>
+      <div class="texto-header">Agricultoras</div>      
     </div>
   </div>
  <!--Search Bar  -->
