--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -11,8 +11,8 @@
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
-      </ion-icon>
-      <h4 class="texto-header">Ubicación</h4>
+      </ion-icon>      
+      <div class="texto-header">Ubicación</div>
     </div>
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
