--- a/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
+++ b/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
@@ -9,7 +9,7 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/login.svg">
       </ion-icon>
-      <h4 class="texto-header">Mis órdenes</h4>
+      <div class="texto-header">Mis órdenes</div>      
     </div>    
   </div>
     <div class="ion-padding" style="text-align:center;">
