--- a/src/app/login/inicio/inicio.page.html
+++ b/src/app/login/inicio/inicio.page.html
@@ -4,7 +4,7 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/login.svg">
       </ion-icon>
-      <h4 class="texto-header">Login</h4>
+      <div class="texto-header">Login </div>      
     </div>
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
