--- a/src/app/login/registrarse/registrarse.page.html
+++ b/src/app/login/registrarse/registrarse.page.html
@@ -4,7 +4,7 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/register_icon.svg">
       </ion-icon>
-      <h4 class="texto-header">Regístrate</h4>
+      <div class="texto-header">Regístrate </div>       
     </div>
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
