--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
@@ -1,46 +1,69 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Perfil mujer agricultora</ion-title>
-   
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div class="border-top-page">
-    <!-- Contenedor 1 -->
-    <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/user.svg">
-      </ion-icon>
-      <h4 class="texto-header">Perfil mujer agricultora</h4>
-    </div>    
+    <div class="contenedor-header-icon">
+      <!-- Contenedor 1 -->
+      <div class="contenedor-header-config">
+        <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/agricultor.svg">
+        </ion-icon>
+        <div class="texto-header">Editar perfil</div>
+      </div>      
+    </div>
+      <!-- Boton Editar Perfil -->
+    <div class="icon-end">
+      <ion-button (click)="onClick()" class="boton-warmi-in">
+        <ion-icon slot="icon-only" src="assets/icon/update_date.svg"></ion-icon>
+      </ion-button>
+    </div>
   </div>
-  <ion-card style="border-radius:20px; text-align: center;">
-   
-    <img width="125" src="assets/img/comprador.jpg" />
-    <ion-card-header>
-      <ion-card-title> {{name}}</ion-card-title>
-      <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
-     </ion-card-header>
-    <ion-card-content>
-      {{phone}}
-    </ion-card-content>
-    <form [formGroup]="form">      
-      <div class="cont">
-          <div class="stars">
-            <ngx-star-rating formControlName="rating" [id]="'rating'" [disabled] ="true"></ngx-star-rating>
+  <!-- Dato 1 -->
+    <div class="datos-personales">
+      <div class="imagen-buttom">
+        <img class="img-profile" src="assets/img/comprador.jpg" />
+        <a class="imagen-in-buttom" href="http://">
+          <ion-icon slot="start" src="assets/iconos/camera.svg" class="size-icon-camera"></ion-icon>
+        </a>
+      </div>
+      <div>
+        <ion-card-header>
+          <ion-card-title class="text-color-purple text-bold"> {{name}}</ion-card-title>
+          <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <div class="text-bold text-color-brown">Id:</div>
+          <div class="text-color-purple">03232323323</div>
+          <!--  -->
+          <div class="text-bold text-color-brown">Teléfono:</div>
+          <div class="text-color-purple">{{phone}}</div>
+        </ion-card-content>
+      </div>
+    </div>  
+  <!-- Descripcion y start -->
+  <div class="padding-profile-desc">
+    <div class="contenedor-descripcion">
+      <div class="text-color-purple">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus consequatur
+        consequuntur nobis harum expedita accusantium provident, at perferendis. Eius minima nostrum eum velit
+        necessitatibus adipisci exercitationem soluta ad, quasi, illo veniam. Eius, obcaecati impedit?</div>
+    </div>
+    <div>
+      <div class="ion-text-left text-bold text-color-brown">Calificación</div>
+      <div>
+        <form [formGroup]="form">
+          <div class="cont">
+            <div class="stars">
+              <ngx-star-rating formControlName="rating" [id]="'rating'" [disabled]="true"></ngx-star-rating>
+            </div>
           </div>
-        </div>
-  </form>
-  
+        </form>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+  <ion-card style="width: 98%; height: 30%;">
+    <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
   </ion-card>
-
-<ion-card style="width: 95%; height: 30%;">
-  <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
-</ion-card>
-
-<ion-card class="ion-padding">
-  <ion-card-title>08:00 -- 17:00</ion-card-title>
-  <ion-card-subtitle>Lunes, martes, jueves</ion-card-subtitle>
-</ion-card>
-<ion-button size="full" class="boton-warmi-in" [routerLink]="['/consumidor/tab-inicial/productos', id]">Ver los productos</ion-button>
+  <ion-card class="ion-padding">
+    <ion-card-title>08:00 -- 17:00</ion-card-title>
+    <ion-card-subtitle>Lunes, martes, jueves</ion-card-subtitle>
+  </ion-card>
+  <ion-button size="full" class="boton-warmi-in" [routerLink]="['/consumidor/tab-inicial/productos', id]">Ver productos</ion-button>
 </ion-content>
