--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -1,17 +1,11 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Carrito de compras </ion-title>
-  </ion-toolbar>
-</ion-header> -->
 <ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
-      </ion-icon>
-      <h4 class="texto-header">Carrito de compra</h4>
-    </div>
-    
+      </ion-icon>      
+      <div class="texto-header">Carrito de compra</div>
+    </div>    
   </div>
   <ion-item-divider>
     <ion-grid>
