--- a/src/app/googlemaps/googlemaps/googlemaps.component.html
+++ b/src/app/googlemaps/googlemaps/googlemaps.component.html
@@ -1,19 +1,26 @@
-
 <ion-content>
-  <div class="contenedor-i">
-    <div class="size-input  contenedor-i">
-      <ion-icon *ngIf="!buscador" class="size-icon32" slot="start" src="/assets/iconos/search.svg"></ion-icon>
-      <input *ngIf="!buscador" class="searchInput" type="text" id="inputSearch" [(ngModel)]="searchGoogle" showCancelButton="never" />
-  <input type="hidden" (input) = "positionSet = $event.target.value" [(ngModel)]="positionSet">
 
+  <div class="contenedor-search">
+    <div class="contenedor-item-s">
+      <!-- <div>icono + </div> -->
+      <!-- <div>search</div> -->
+      <ion-icon *ngIf="!buscador" class="size-icon" slot="start" src="/assets/iconos/search.svg"></ion-icon>
+      <input *ngIf="!buscador" class="size-items border-search searchInput" type="text" id="inputSearch" [(ngModel)]="searchGoogle"
+        showCancelButton="never" />
+      <input type="hidden" (input)="positionSet = $event.target.value" [(ngModel)]="positionSet">
     </div>
-    <ion-chip *ngIf="!miUbicacion" class="miubicacion" (click)="mylocation()">
-      <ion-label class="text-center">Mi ubicación actual</ion-label>
-      <ion-icon name="locate"></ion-icon>
-    </ion-chip>
-  </div>
 
-  <div #map class="map "></div>
+    <div class="contenedor-item-s">
+      <!-- <div>mi chip</div> -->
+      <ion-chip *ngIf="!miUbicacion" (click)="mylocation()" class="ubicacion-actual">
+        <ion-label>Mi ubicacción actual</ion-label>
+        <ion-icon name="locate"></ion-icon>
+      </ion-chip>
+    </div>
+  </div>
+  <div class="padd-itemmap"></div>
+  <div #map class="map"></div>
+
+
 
 </ion-content>
-
