--- a/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
+++ b/src/app/ma_vendedora/componets/camioneta/camioneta.component.html
@@ -4,5 +4,5 @@
   <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
 </ion-card>
 
-<ion-button class="ion-padding boton-azul" expand="block" (click)="viewCars()">  &nbsp; &nbsp;Ver todas las camionetas</ion-button>
+<ion-button class="ion-padding boton-azul" class="boton-warmi-in" expand="block" (click)="viewCars()">  &nbsp; &nbsp;Ver camionetas</ion-button>
 
