--- a/src/app/ma_vendedora/componets/compartido/compartido.component.html
+++ b/src/app/ma_vendedora/componets/compartido/compartido.component.html
@@ -1,4 +1,4 @@
-<ion-searchbar placeholder="Buscar" value=""></ion-searchbar>
+<ion-searchbar placeholder="Buscar" class="search-bar-orange" value=""></ion-searchbar>
 <ion-card>
 
   <ion-item *ngFor="let shared of shareds" style="font-size: 12px;" (click)="gotoProfile(shared.id)">
