--- a/src/app/ma_vendedora/tab_productos/productos/productos.page.html
+++ b/src/app/ma_vendedora/tab_productos/productos/productos.page.html
@@ -1,14 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Productos</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <ion-content>
-    <br>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>      
+      <div class="texto-header">Productos</div>
+    </div>    
+  </div>
     <ion-card>
-    <ion-segment [value]="valueSelected" [scrollable]="true"(ionChange)= "segmentChange($event)">
+    <ion-segment [value]="valueSelected" class="card-tabs-bg" [scrollable]="true"(ionChange)= "segmentChange($event)">
       <ion-segment-button value="1">
         <ion-label>Productos</ion-label>
       </ion-segment-button>
@@ -23,8 +23,4 @@
   <div *ngIf="valueSelected == 2">
     <app-agricultoras></app-agricultoras>
   </div>
-
-  </ion-content>
-  
-
 </ion-content>
