--- a/src/app/ma_vendedora/componets/privado/privado.component.html
+++ b/src/app/ma_vendedora/componets/privado/privado.component.html
@@ -1,5 +1,9 @@
-<h4 class="ion-margin">Paradas de los autos privados</h4>
-
+<!-- <h4 class="ion-margin">Paradas de los autos privados</h4> -->
+<div class="contenedor-title">
+  <div>
+    <h4 class="text-center size-text35px text-bold text-color-purple">Paradas de los autos privados</h4>
+  </div>
+</div>
 
 <ion-card style="width: 95%; height: 575px;">
     <app-googlemaps [feature] = "feature"></app-googlemaps>
