--- a/src/app/ma_vendedora/menu/menu.page.html
+++ b/src/app/ma_vendedora/menu/menu.page.html
@@ -1,28 +1,33 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="transporte">
-      <ion-icon name="bus-outline"></ion-icon>
-      <ion-label>Transporte</ion-label>
+      <!-- <ion-icon name="bus-outline"></ion-icon>
+      <ion-label>Transporte</ion-label> -->
+      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-label class="text-color-purple text-bold">Transporte</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="productos">
-      <ion-icon name="nutrition-outline"></ion-icon>
-      <ion-label>Productos</ion-label>
+
+      <!-- <ion-icon name="nutrition-outline"></ion-icon>
+      <ion-label>Productos</ion-label> -->
+      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-label class="text-color-purple text-bold">Productos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="ventas">
-      <ion-icon name="stats-chart-outline"></ion-icon>
-      <ion-label>Ventas</ion-label>
+      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-label class="text-color-purple text-bold">Ventas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="notificaciones">
-      <ion-icon name="earth-outline"></ion-icon>
-      <ion-label>Notificaciones</ion-label>
+      <ion-icon src="/assets/iconos/notifications_1.svg"></ion-icon> 
+      <ion-label class="text-color-purple text-bold">Notificaciones</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
