--- a/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
@@ -1,14 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Movilización</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <ion-item-divider class="ion-padding" style="text-align: center; color: black;">
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>      
+      <div class="texto-header">Movilización</div>
+    </div>
+    <!-- Contenedor 2 -->
+    <div class="contenedor-title">
+      <div>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Muestra la información de las paradas del transporte público</h4>
+      </div>
+    </div>
+  </div>
+  <!-- <ion-item-divider class="ion-padding" style="text-align: center; color: black;">
     <h5>Muestra la información de las paradas del transporte público</h5>
-  </ion-item-divider>
-  <ion-card style="width: 95%; height: 80%;">
+  </ion-item-divider> -->
+  <ion-card style="width: 97%; height: 80%;">
     <app-googlemaps [feature] = "feature"></app-googlemaps>
   </ion-card>
 </ion-content>
