--- a/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
+++ b/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
@@ -1,21 +1,34 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>Movilización</ion-title>
+    <ion-title>Movilizaciónnnn</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
-  <ion-searchbar placeholder="Buscar" value=""></ion-searchbar>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Movilización</div>
+    </div>
+  </div>
+  <div class="ion-padding">
+    <ion-searchbar placeholder="Buscar" class="search-bar-orange" value=""></ion-searchbar>
+  </div>
   <ion-card>
-  <ion-item *ngFor="let camioneta of listCamionetas" style="font-size: 12px;" [routerLink]="['//ma_vendedora/menu/transporte/perfil-conductor', camioneta.id]" >
-    <ion-chip slot="end" color="success">{{camioneta.status}}</ion-chip>
-    <ion-thumbnail slot="start">
-      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
-    </ion-thumbnail>
-    
-    <ion-label><h4>{{camioneta.name}}</h4>{{camioneta.description}}<p>{{camioneta.users_id}}</p>
-      <p>{{camioneta.car_plate}}</p></ion-label>
-  </ion-item>
- 
-</ion-card>
+    <ion-item *ngFor="let camioneta of listCamionetas" style="font-size: 12px;"
+      [routerLink]="['//ma_vendedora/menu/transporte/perfil-conductor', camioneta.id]">
+      <ion-chip slot="end" color="success">{{camioneta.status}}</ion-chip>
+      <ion-thumbnail slot="start">
+        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <h4>{{camioneta.name}}</h4>{{camioneta.description}}<p>{{camioneta.users_id}}</p>
+        <p>{{camioneta.car_plate}}</p>
+      </ion-label>
+    </ion-item>
+
+  </ion-card>
 </ion-content>
