--- a/src/app/ma_acopiadora/detalles-acopio/detalles-acopio.page.html
+++ b/src/app/ma_acopiadora/detalles-acopio/detalles-acopio.page.html
@@ -1,10 +1,18 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Detalles centro de acopio</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Detalles centro de acopio</div>
+    </div>    
+  </div>
 <ion-card style="height: 95%; width: 95%;">
 <ion-card class="titulo-fondo">
   <h4>Centro de acopio 1</h4>
