--- a/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
@@ -1,14 +1,27 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Ubicación agricultoras</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>      
+      <div class="texto-header">Ubicación agricultoras</div>
+    </div>
+    <!-- Contenedor 2 -->
+    <div class="contenedor-title">
+      <div>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Ubicación  de punto de venta de vendoras</h4>
+      </div>
+    </div>
+  </div>
+<!-- 
   <ion-item-divider style="text-align: center; color: black;">
     <h4>Ubicación  de punto de venta de vendoras</h4>
-  </ion-item-divider>
-  <ion-searchbar placeholder="Buscar" showCancelButton="never"></ion-searchbar>
+  </ion-item-divider> -->
+<div class="container-search-bar">  
+    <ion-searchbar class="search-bar-orange size-search-bar" placeholder="Buscar" showCancelButton="never"></ion-searchbar>  
+</div>
+  
+
   <ion-card class="map">
   <capacitor-google-maps id="map"></capacitor-google-maps>
 </ion-card>
