--- a/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
@@ -1,13 +1,47 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Invitaciones</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
+<ion-content>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Invitaciones</div>
+    </div>
+    <!-- Contenedor 2 -->
+    <div class="contenedor-title">
+      <div>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Asociación de Mujeres "A"</h4>
+      </div>
+    </div>
+  </div>
 
-<ion-content >
-<ion-card class="invitacion">
+  <div class="contenedor-lista">
+    <div class="lista-ventajas">
+      <div class=" text-color-purple text-bold ventajas">Ventajas</div>
+      <div class="text-color-purple">1. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">2. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">3. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">4. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">5. Lorem ipsum dolor sit amet.</div>
+    </div>
+    <div class="lista-reglas">
+      <div class="text-color-purple text-bold reglas">Reglas</div>
+      <div class="text-color-purple">1. Lorem ipsum dolor sit amet ipsum dolor sit amet.</div>
+      <div class="text-color-purple">2. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">3. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">4. Lorem ipsum dolor sit amet.</div>
+      <div class="text-color-purple">5. Lorem ipsum dolor sit amet.</div>
+    </div>
+  </div>
+
+  <!-- <ion-card class="invitacion">
   <h4 class="ion-text-center" style="color:black">Asociacion Mujeres A</h4>
-</ion-card>
+</ion-card> -->
+  <!-- 
 <ion-card>
   <ion-card-title class="title">
     Ventajas
@@ -33,8 +67,9 @@
     Regla 2
     Regla 3
   </ion-textarea>
-</ion-card>
-<ion-card class="map">
-  <capacitor-google-maps id="map"></capacitor-google-maps>
-</ion-card>
+</ion-card> -->
+<div></div>
+  <ion-card class="map">
+    <capacitor-google-maps id="map"></capacitor-google-maps>
+  </ion-card>
 </ion-content>
