--- a/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
@@ -1,11 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Notificaciones</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Notificaciones</div>
+    </div>    
+  </div>
   <ion-row>
     <ion-col style="margin-top: 8px;">
       <ion-label >Estado</ion-label> 
