--- a/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.html
+++ b/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.html
@@ -1,11 +1,27 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Crear centro acopio</ion-title>
   </ion-toolbar>
 </ion-header>
-
+ -->
 
 <ion-content>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Crear centro de acopio</div>
+    </div>
+    <!-- Contenedor 2
+    <div class="contenedor-title">
+      <div>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Indica en el mapa la ubicación de la
+          asociación</h4>
+      </div>
+    </div> -->
+  </div>
+
   <ion-card style="height: 105%; width: 95%;">
     <ion-item>
       <ion-label position="stacked">Nombre del centro</ion-label>
