--- a/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
@@ -1,17 +1,35 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Geolocalización</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
-<ion-item-divider style="text-align: center; color: black;">
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Geolocalización</div>
+    </div>
+    <!-- Contenedor 2 -->
+    <div class="contenedor-title">
+      <div>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Indica en el mapa la ubicación de la
+          asociación</h4>
+      </div>
+    </div>
+  </div>
+  <!-- <ion-item-divider style="text-align: center; color: black;">
   <h4>Indica en el mapa la ubicación de la asociación</h4>
-</ion-item-divider>
-<ion-searchbar placeholder="Buscar" showCancelButton="never"></ion-searchbar>
-<ion-card class="map">
-  <capacitor-google-maps #map></capacitor-google-maps>
-</ion-card>
-<ion-button class="ion-padding boton-azul" expand="block" (click)="continuar()">  &nbsp; &nbsp;Continuar</ion-button>
+</ion-item-divider> -->
+  <div class="container-search-bar">
+      <ion-searchbar placeholder="Buscar" class="search-bar-orange size-search-bar" showCancelButton="never"></ion-searchbar>
+  </div>
+  
+  <ion-card class="map">
+    <capacitor-google-maps #map></capacitor-google-maps>
+  </ion-card>
+  <ion-button class="boton-warmi-in" expand="block" (click)="continuar()"> &nbsp; &nbsp;Continuar</ion-button>
 
 </ion-content>
