--- a/src/app/ma_lideresa/menu/menu.page.html
+++ b/src/app/ma_lideresa/menu/menu.page.html
@@ -1,23 +1,23 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="agricultoras">
-      <ion-icon name="person-circle"></ion-icon>
-      <ion-label>Agricultoras</ion-label>
+      <ion-icon src="/assets/iconos/agricultores.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Agricultoras</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="invitacion">
-      <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-      <ion-label>Invitación</ion-label>
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Invitación</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="notificacion">
-      <ion-icon name="earth-outline"></ion-icon>
-      <ion-label>Notificaciones</ion-label>
+      <ion-icon src="/assets/iconos/notifications_1.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Notificaciones</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
