--- a/src/app/ma_lideresa/tab_agricultoras/lista/tab-agricultoras.page.html
+++ b/src/app/ma_lideresa/tab_agricultoras/lista/tab-agricultoras.page.html
@@ -1,28 +1,34 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Agricultoras</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <div class="border-top-page">
+    <!-- Contenedor 1 -->
+    <div class="contenedor-header">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      </ion-icon>
+      <div class="texto-header">Agricultoras</div>
+    </div>
+  </div>
+  <div class="container-search-bar" style="margin: 20px 0 0 0;">
+    <ion-searchbar placeholder="Buscar" class="search-bar-orange size-search-bar" showCancelButton="never"></ion-searchbar>
+</div>
 
-<ion-content class="ion-padding">
-
-  <ion-searchbar placeholder="Buscar" showCancelButton="never"></ion-searchbar>
   <ion-grid>
     <ion-row>
+      <!-- Pendiente se puede usa la page de lista de agricultoras del consumidor -->
       <ion-col>
         <div>
           <ion-card class="lista-agricultoras">
             <img src="assets/img/mujer.webp" />
             <ion-card-header>
-              <ion-card-title>María Perez</ion-card-title>
-              <ion-card-subtitle class="color-principal">099335589</ion-card-subtitle>
-             </ion-card-header>
+              <ion-card-title class="text-white">María Perez</ion-card-title>
+              <ion-card-subtitle class="text-white">099335589</ion-card-subtitle>
+            </ion-card-header>
             <ion-card-content>
-          Dirección
+              Dirección
             </ion-card-content>
           </ion-card>
         </div>
       </ion-col>
+      <!--  -->
       <ion-col>
         <div>
           <ion-card class="lista-agricultoras">
@@ -32,12 +38,13 @@
               <ion-card-subtitle class="color-principal">0993335589</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
-             Dirección
+              Dirección
             </ion-card-content>
           </ion-card>
         </div>
       </ion-col>
     </ion-row>
+    <!--  -->
     <ion-row>
       <ion-col>
         <div>
@@ -46,9 +53,9 @@
             <ion-card-header>
               <ion-card-title>María Perez</ion-card-title>
               <ion-card-subtitle class="color-principal">099335589</ion-card-subtitle>
-             </ion-card-header>
+            </ion-card-header>
             <ion-card-content>
-          Dirección
+              Dirección
             </ion-card-content>
           </ion-card>
         </div>
@@ -62,13 +69,14 @@
               <ion-card-subtitle class="color-principal">0993335589</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
-             Dirección
+              Dirección
             </ion-card-content>
           </ion-card>
         </div>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="chatbox-outline"></ion-icon> &nbsp; &nbsp;Enviar invitación</ion-button>
+  <ion-button class="boton-warmi-in" expand="block">
+    <ion-icon name="chatbox-outline" ></ion-icon> &nbsp; &nbsp;Enviar invitación
+  </ion-button>
 </ion-content>
-
