--- a/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.scss
+++ b/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.scss
@@ -1,20 +1,46 @@
-.invitacion{
-    background-color: #DBF8DE;
+.contenedor-lista{
+    // margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    // align-items: center;
+    width: 100%;
+    height: 160px;
 }
-.items{
-    margin-top: 15px;
-    margin-left: 10px;
+
+.lista-ventajas{
+    margin: 5px;    
+    padding: 10px 0px 10px 10px;
+    width: 50%; 
+    justify-content: left;
+}
+
+.lista-reglas{
+    margin: 5px;
+    padding: 10px 0px 10px 10px;
+    width: 50%;
+    justify-content: left;
+}
+
+
+// .invitacion{
+//     background-color: #DBF8DE;
+// }
+// .items{
+//     margin-top: 15px;
+//     margin-left: 10px;
     
-}
-.title{
-margin-top: 15px;
-margin-left: 10px;
-}
+// }
+// .title{
+// margin-top: 15px;
+// margin-left: 10px;
+// }
 capacitor-google-maps {
-    display: inline-block;
+    display: flex;    
     width: 100%;
     height: 100%;
   }
+  
 .map{
     height: 40%;
     width: 95%;
